--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kinsta User</title>
+        <title>River Bass WCU</title>
         <!-- CSS: Inside head tag -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
             <div class="container-fluid">
                 <div class="mx-4">
-                    <a class="navbar-brand" href="#">Kinsta User</a>
+                    <a class="navbar-brand" href="#">River Bass WCU</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -40,11 +40,11 @@
         <div class="container my-4 ">
             <div class="row justify-content-center">
                 <div class="col-lg mb-lg-4">
-                    <img src="image.jpg" class="img-fluid" alt="" srcset="">
+                    <img src="robot.jpg" class="img-fluid" alt="" srcset="">
                 </div>
                 <div class="col-lg mx-2 align-self-center">
                     <div class="my-3">
-                        <h1 class="text-center">I'm a Kinsta User</h1>
+                        <h1 class="text-center">I'm River Bass</h1>
                         <p>As a passionate software developer, I am deeply enthusiastic about creating and
                             developing software applications. I am constantly learning and experimenting with new
                             technologies and approaches, and I have a strong desire to create innovative and effective
@@ -66,31 +66,23 @@
                             font-size: 4em;
                         }
                     </style>
-                    <!-- Skills -->
-                    <div class="col">
-                        <div class="text-center">
-                            <h4>WordPress</h4>
-                            <i class="devicon-wordpress-plain"></i>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="text-center">
-                            <h4>Django</h4>
-                            <i class="devicon-django-plain"></i>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="text-center">
-                            <h4>Python</h4>
-                            <i class="devicon-python-plain"></i>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="text-center">
-                            <h4>GitHub</h4>
-                            <i class="devicon-github-original"></i>
-                        </div>
-                    </div>
+					<div class="row justify-content-center text-center g-4">
+
+					<div class="col-6 col-md-4 col-lg-2">
+						<h4>Python</h4>
+						<i class="devicon-python-plain"></i>
+					</div>
+
+					<div class="col-6 col-md-4 col-lg-2">
+						<h4>GitHub</h4>
+						<i class="devicon-github-original"></i>
+					</div>
+
+					<div class="col-6 col-md-4 col-lg-2">
+						<h4>C++</h4>
+						<i class="devicon-cplusplus-plain"></i>
+					</div>
+
                 </div>
             </div>
         </div>
