Changed about me info

--- a/index.html
+++ b/index.html
@@ -45,13 +45,10 @@
                 <div class="col-lg mx-2 align-self-center">
                     <div class="my-3">
                         <h1 class="text-center">I'm River Bass</h1>
-                        <p>As a passionate software developer, I am deeply enthusiastic about creating and
-                            developing software applications. I am constantly learning and experimenting with new
-                            technologies and approaches, and I have a strong desire to create innovative and effective
-                            solutions to complex problems. I am driven by curiosity and love for problem-solving, and
-                            I
-                            am committed to producing high-quality, well-designed software that meets the needs of
-                            users.
+                        <p>I can remember sitting at my desk with the words "how do computers work?" typed into google.
+						From that moment, I knew that I should try out IT. From the first week, I knew that I loved my job and that I wanted to pursue it further.
+						Since then, I have been innovating systems for IT effeciency at WCU along with studying Electrical Computer Engineering Technology. 
+						My dream is to become an IT systems engineer or work in circuit design. 
                         </p>
                     </div>
                 </div>
